# kioku-enclave

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  map.md
.github/workflows/: build.yml  security.yml
ci/: build-and-roll.yml.template  map.md
scripts/: release.sh
src/: acme.rs  attestation.rs  auth.rs  crypto.rs  embedding.rs  episodes.rs  error.rs  ingest.rs  main.rs  map.md  ocr.rs  search.rs  store.rs  timeline.rs  tls.rs
src/cp/: auth.rs  control_store.rs  cors.rs  email_worker.rs  finalizer.rs  isotime.rs  limits.rs  map.md  mod.rs  oauth.rs  query.rs  summarizer.rs  sync.rs  tokens.rs  vertex.rs
