[package]
name = "kioku-enclave"
version = "0.6.7"
edition = "2021"
rust-version = "1.96"
description = "Attested Kioku backend for encrypted personal-memory storage and retrieval"
license = "Apache-2.0"
repository = "https://github.com/joerodriguez/kioku-enclave"
homepage = "https://github.com/joerodriguez/kioku-enclave"
publish = false

# Vector search: sqlite-vec (C extension, compiled via cc::Build) for KNN
# storage, plus an in-enclave candle BERT encoder for query embeddings.
# Design decision (2026-07-05, supersedes the earlier no-ML-runtime stance):
# MCP queries from Claude/ChatGPT arrive at the enclave as raw text with no
# Mac in the loop, so query embedding must happen server-side. Running the
# model INSIDE the attested enclave is the only option that keeps query text
# within the TEE boundary (sending it to a Vertex embedding API would add a
# second plaintext egress). Document embeddings are computed on the Mac and
# arrive via sync; both sides pin the same model (see src/embedding.rs).

[[bin]]
name = "kioku-enclave"
path = "src/main.rs"

[dependencies]
# HTTP server — axum on tokio
axum = { version = "0.8.4", default-features = false, features = ["http1", "json", "query", "tokio", "multipart"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net"] }
tower = { version = "0.5.2", default-features = false }

# Production TLS termination inside the enclave (ADR-0001). The attested binary
# is the first server-side application code to see request plaintext. rustls only
# (ring provider) keeps the musl FROM-scratch build free of OpenSSL. hyper +
# hyper-util drive the TLS accept loop; sha2 computes the live certificate
# fingerprint bound into the public attestation-token nonce.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
hyper = { version = "1.10", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["service", "tokio"] }
sha2 = "0.10"

# ACME (RFC 8555) client for in-enclave TLS certificate issuance/renewal
# (ADR-0003): the enclave answers HTTP-01 itself and generates the key inside
# the TEE. default-features OFF is load-bearing: the crate's default HTTP
# client verifies TLS via the *platform* certificate store, which does not
# exist in the FROM-scratch image — src/acme.rs plugs in our reqwest
# (webpki-roots) client instead. "ring" (never aws-lc) keeps the musl build
# pure-Rust and transitively enables rcgen/ring for in-enclave key+CSR
# generation (Order::finalize). bytes is needed for the HttpClient adapter.
instant-acme = { version = "0.8.5", default-features = false, features = ["ring"] }
bytes = "1"
http-body = "1"

# SQLite, bundled so the binary carries its own libsqlite3 with FTS5 compiled in.
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Serialisation
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Crypto: AES-256-GCM
aes-gcm = { version = "0.10.3", features = ["std"] }
rand = "0.8.5"

# Typed errors
thiserror = "2.0.12"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }

# HTTP client for KMS / GCS REST — rustls only, NO openssl.
# webpki-roots bundles Mozilla's CA roots into the binary so the FROM-scratch
# container image needs no /etc/ssl/certs on the filesystem.
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }

# Async trait support (used by KmsClient and GcsClient traits)
async-trait = "0.1.88"

# Base64 encoding/decoding for KMS payloads and DEK storage
base64 = "0.22.1"

# URL-encoding for GCS object names
urlencoding = "2.1.3"

# Temporary files for per-user SQLite blobs
tempfile = "3.20.0"

# JWT verification for caller ID-token auth (Google RS256 tokens).
# "use-pem" / "use-native-tls" excluded; we use the rustls path everywhere.
# rsa feature pulls in the rsa crate for RS256 verify; we exclude pem (not needed at runtime).
# rust_crypto = pure-Rust CryptoProvider (no C/system deps — required for the
# musl static FROM-scratch build). WITHOUT a provider feature, jsonwebtoken 10
# PANICS at signature-verify time ("Could not determine CryptoProvider"), which
# crashed the enclave on every real ID token. "rsa" alone is NOT a provider.
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }

# Self-signed certificate generation at boot for RA-TLS (ADR-0001).
# Pinned to the same version instant-acme's ACME path uses (ADR-0003) so the
# auditable binary carries exactly one rcgen; default-features off to skip the
# aws_lc_rs default and stay on ring.
rcgen = { version = "0.14.2", default-features = false, features = ["pem", "ring"] }

# URL-form encoding for STS token exchange (RFC 8693 form body).
# Already an indirect dep via reqwest but we need it directly for tests.
serde_urlencoded = "0.7.1"
# sqlite-vec: C-based SQLite vector extension. build.rs compiles sqlite-vec.c
# with SQLITE_CORE defined so it uses rusqlite's bundled libsqlite3 headers
# rather than a system sqlite3. The cc crate picks up the musl cross-toolchain
# automatically when CARGO_TARGET_X86_64_UNKNOWN_LINUX_MUSL_LINKER is set in CI
# (set by apt-get install musl-tools + rustup target add x86_64-unknown-linux-musl).
sqlite-vec = "0.1.9"

# In-enclave query embedding (hybrid search): candle runs the
# paraphrase-multilingual-MiniLM-L12-v2 BERT encoder on CPU. Pure-Rust
# compute (gemm), no ONNX runtime, no dynamic libs — musl/FROM-scratch safe.
# Candle 0.11 currently pulls tokenizers 0.22 with its `onig` feature, while
# our direct tokenizer uses fancy-regex. The native Oniguruma build is therefore
# an audited transitive component, not a dynamically linked runtime library.
# Model weights are NOT vendored in this repo: the Docker build downloads them
# with pinned hashes and bakes them into the attested image; local dev/tests
# point EMBED_MODEL_DIR at a downloaded copy and skip when it is absent.
candle-core = { version = "0.11", default-features = false }
candle-nn = { version = "0.11", default-features = false }
candle-transformers = { version = "0.11", default-features = false }
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
regex = "1.10"

# Decode uploaded visual-evidence JPEGs inside the enclave so multipart MIME,
# dimensions, and hashes cannot stand in for inspection of the actual bytes.
jpeg-decoder = { version = "0.3.2", default-features = false }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros"] }
tempfile = "3.20.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
